chore: Add dev setup instructions

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fsx",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "test": "npm test --workspaces --if-present"
+  },
   "workspaces": [
     "packages/*"
   ]
