--- a/package.json
+++ b/package.json
@@ -2,10 +2,27 @@
   "name": "fsx",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "test": "npm test --workspaces --if-present"
+    "test": "npm test --workspaces --if-present",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^8.55.0",
+    "eslint": "^8.55.0",
+    "lint-staged": "^15.2.0",
+    "yorkie": "^2.0.0"
+  }
 }
