chore: Format source code with Prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "deno.lint": false,
-    "deno.enablePaths": [
-        "packages/deno"
-    ]
+  "deno.lint": false,
+  "deno.enablePaths": ["packages/deno"]
 }
