--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,15 +1,13 @@
 {
-    "files": [
-        "src/fsx-types.ts"
-    ],
-    "compilerOptions": {
-        "declaration": true,
-        "emitDeclarationOnly": true,
-        "allowJs": true,
-        "checkJs": true,
-        "outDir": "dist",
-        "target":"ES2022",
-        "moduleResolution": "NodeNext",
-        "module": "NodeNext",
-    }
+  "files": ["src/fsx-types.ts"],
+  "compilerOptions": {
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "allowJs": true,
+    "checkJs": true,
+    "outDir": "dist",
+    "target": "ES2022",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext"
+  }
 }
