--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Set up Deno ${{ matrix.deno-version }}
-      uses: denolib/setup-deno@v1
+      uses: denoland/setup-deno@v1
       with:
         deno-version: ${{ matrix.deno-version }}
 
