feat: Fsx class handles parameter validation
feat(core): Update Fsx class to handle parameter validation on impl
methods.

feat(test): Remove test for checking filePath is not a number.

feat(node): Remove unnecessary parameter check.

feat(memory): Remove unnecessary parameter check.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "node --test ./tests/"
+    "test": "mocha tests"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/humanwhocodes/fsx#readme",
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@fsx/types": "^0.0.0"
+    "@fsx/types": "^0.0.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.2.2"
   }
 }
