--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "mocha tests"
+    "test": "c8 mocha tests"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/humanwhocodes/fsx#readme",
   "devDependencies": {
     "@fsx/types": "^0.0.0",
+    "c8": "^8.0.1",
     "mocha": "^10.2.0",
     "typescript": "^5.2.2"
   }
