--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -9,17 +9,17 @@ body:
   attributes:
     label: Which packages are affected?
     options:
-      - label: "`@fsx/core`"
+      - label: "`fsx-core`"
         required: false
-      - label: "`@fsx/node`"
+      - label: "`fsx-node`"
         required: false
-      - label: "`@fsx/deno`"
+      - label: "`fsx-deno`"
         required: false
-      - label: "`@fsx/memory`"
+      - label: "`fsx-memory`"
         required: false
-      - label: "`@fsx/test`"
+      - label: "`fsx-test`"
         required: false
-      - label: "`@fsx/types`"
+      - label: "`fsx-types`"
         required: false
 - type: textarea
   attributes:
