--- a/packages/deno/deno.json
+++ b/packages/deno/deno.json
@@ -1,6 +1,6 @@
 {
   "imports": {
-    "@fsx/core": "../core/src/fsx.js",
-    "@fsx/types": "../types/src/fsx-types.ts"
+    "fsx-core": "../core/src/fsx.js",
+    "fsx-types": "../types/src/fsx-types.ts"
   }
 }
