--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fsx/memory",
+  "name": "fsx-memory",
   "version": "0.0.0",
   "description": "The in-memory bindings for the fsx library.",
   "type": "module",
@@ -39,10 +39,10 @@
     "@types/node": "^20.9.4",
     "mocha": "^10.2.0",
     "typescript": "^5.2.2",
-    "@fsx/test": "^0.0.0",
-    "@fsx/types": "^0.0.0"
+    "fsx-test": "^0.0.0",
+    "fsx-types": "^0.0.0"
   },
   "dependencies": {
-    "@fsx/core": "^0.0.0"
+    "fsx-core": "^0.0.0"
   }
 }
