chore: Set bootstrap sha for release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,5 @@
 {
+  "bootstrap-sha": "5c2ed90e82dc11b8c11eafc91be36485e9ff6e90",
   "plugins": ["node-workspace"],
   "bump-minor-pre-major": true,
   "packages": {
