chore: Update change request issue template

--- a/.github/ISSUE_TEMPLATE/change.yml
+++ b/.github/ISSUE_TEMPLATE/change.yml
@@ -1,4 +1,4 @@
-name: "\U0001F680 Request a change (not rule-related)"
+name: "\U0001F680 Request a change"
 description: "Request a new feature or change to an existing feature"
 title: "Change Request: (fill in)"
 labels:
