--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -2,66 +2,66 @@ name: "\U0001F41E Report a problem"
 description: "Report a problem with fsx"
 title: "Bug: (fill in)"
 labels:
-  - bug
-  - "repro:needed"
+    - bug
+    - "repro:needed"
 body:
-- type: checkboxes
-  attributes:
-    label: Which packages are affected?
-    options:
-      - label: "`fsx-core`"
-        required: false
-      - label: "`fsx-node`"
-        required: false
-      - label: "`fsx-deno`"
-        required: false
-      - label: "`fsx-memory`"
-        required: false
-      - label: "`fsx-test`"
-        required: false
-      - label: "`fsx-types`"
-        required: false
-- type: textarea
-  attributes:
-    label: Environment
-    description: |
-      Please provide the following information:
-    value: |
-        Node version: 
-        npm version: 
-        Deno version: 
-        Operating System: 
-  validations:
-    required: true
-- type: textarea
-  attributes:
-    label: What did you do?
-  validations:
-    required: true
-- type: textarea
-  attributes:
-    label: What did you expect to happen?
-  validations:
-    required: true
-- type: textarea
-  attributes:
-    label: What actually happened?
-  validations:
-    required: true
-- type: input
-  attributes:
-    label: Link to Minimal Reproducible Example
-    description: 'Link to a [StackBlitz](https://stackblitz.com) or GitHub repo with a minimal reproduction of the problem. **A minimal reproduction is required** so that others can help debug your issue. If a report is vague (e.g. just a generic error message) and has no reproduction, it may be auto-closed.'
-    placeholder: 'https://stackblitz.com/abcd1234'
-  validations:
-    required: true
-- type: checkboxes
-  attributes:
-    label: Participation
-    options:
-      - label: I am willing to submit a pull request for this issue.
-        required: false
-- type: textarea
-  attributes:
-    label: Additional comments
-    description: Is there anything else you'd like to mention?
+    - type: checkboxes
+      attributes:
+          label: Which packages are affected?
+          options:
+              - label: "`fsx-core`"
+                required: false
+              - label: "`fsx-node`"
+                required: false
+              - label: "`fsx-deno`"
+                required: false
+              - label: "`fsx-memory`"
+                required: false
+              - label: "`fsx-test`"
+                required: false
+              - label: "`fsx-types`"
+                required: false
+    - type: textarea
+      attributes:
+          label: Environment
+          description: |
+              Please provide the following information:
+          value: |
+              Node version: 
+              npm version: 
+              Deno version: 
+              Operating System:
+      validations:
+          required: true
+    - type: textarea
+      attributes:
+          label: What did you do?
+      validations:
+          required: true
+    - type: textarea
+      attributes:
+          label: What did you expect to happen?
+      validations:
+          required: true
+    - type: textarea
+      attributes:
+          label: What actually happened?
+      validations:
+          required: true
+    - type: input
+      attributes:
+          label: Link to Minimal Reproducible Example
+          description: "Link to a [StackBlitz](https://stackblitz.com) or GitHub repo with a minimal reproduction of the problem. **A minimal reproduction is required** so that others can help debug your issue. If a report is vague (e.g. just a generic error message) and has no reproduction, it may be auto-closed."
+          placeholder: "https://stackblitz.com/abcd1234"
+      validations:
+          required: true
+    - type: checkboxes
+      attributes:
+          label: Participation
+          options:
+              - label: I am willing to submit a pull request for this issue.
+                required: false
+    - type: textarea
+      attributes:
+          label: Additional comments
+          description: Is there anything else you'd like to mention?
