--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,37 +39,37 @@ jobs:
               if: ${{ steps.release.outputs.releases_created }}
 
             - name: Publish fsx-core package to npm
-              run: npm publish -w packages/fsx-core
+              run: npm publish -w packages/core
               if: ${{ steps.release.outputs['packages/core--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
             - name: Publish fsx-node package to npm
-              run: npm publish -w packages/fsx-node
+              run: npm publish -w packages/node
               if: ${{ steps.release.outputs['packages/node--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
             - name: Publish fsx-deno package to npm
-              run: npm publish -w packages/fsx-deno
+              run: npm publish -w packages/deno
               if: ${{ steps.release.outputs['packages/deno--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
             - name: Publish fsx-memory package to npm
-              run: npm publish -w packages/fsx-memory
+              run: npm publish -w packages/memory
               if: ${{ steps.release.outputs['packages/memory--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
             - name: Publish fsx-types package to npm
-              run: npm publish -w packages/fsx-types
+              run: npm publish -w packages/types
               if: ${{ steps.release.outputs['packages/types--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
             - name: Publish fsx-test package to npm
-              run: npm publish -w packages/fsx-test
+              run: npm publish -w packages/test
               if: ${{ steps.release.outputs['packages/test--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
