--- a/packages/deno/deno.json
+++ b/packages/deno/deno.json
@@ -1,6 +1,7 @@
 {
   "imports": {
     "fsx-core": "../core/src/fsx.js",
-    "fsx-types": "../types/src/fsx-types.ts"
+    "fsx-types": "../types/src/fsx-types.ts",
+    "@humanwhocodes/retry": "npm:@humanwhocodes/retry@latest"
   }
 }
