chore: Ensure build is run before test

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
+    "pretest": "npm run build",
     "test": "c8 mocha tests"
   },
   "repository": {
