--- a/packages/deno/package.json
+++ b/packages/deno/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
+    "pretest": "npm run build",
     "test": "deno test --allow-read --allow-write"
   },
   "repository": {
