chore: Add fsx-web to release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -15,6 +15,9 @@
     "packages/memory": {
       "release-type": "node"
     },
+    "packages/web": {
+      "release-type": "node"
+    },
     "packages/test": {
       "release-type": "node"
     },
