--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -4,5 +4,6 @@
   "packages/core": "0.4.0",
   "packages/node": "0.5.0",
   "packages/deno": "0.5.0",
-  "packages/memory": "0.4.0"
+  "packages/memory": "0.4.0",
+  "packages/web": "0.0.1"
 }
