--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,8 +7,8 @@
   "main": "dist/web-hfs.js",
   "exports": {
     "import": {
-      "default": "./src/web-hfs.js",
-      "types": "./dist/web-hfs.d.ts"
+      "types": "./dist/web-hfs.d.ts",
+      "default": "./src/web-hfs.js"
     }
   },
   "files": [
@@ -42,6 +42,9 @@
     "url": "https://github.com/humanwhocodes/humanfs/issues"
   },
   "homepage": "https://github.com/humanwhocodes/humanfs#readme",
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "devDependencies": {
     "@wdio/browser-runner": "^8.29.1",
     "@wdio/cli": "^8.29.1",
