chore: Fix renovate.json5

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -13,7 +13,7 @@
     // published for 30 days
     {
       matchDatasources: ['npm'],
-      minimumReleaseAge: '30 days',
-    },
-  ],
+      minimumReleaseAge: '30 days'
+    }
+  ]
 }
