--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.55.0",
+    "@wdio/cli": "^8.31.1",
     "eslint": "^8.55.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
