--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,5 +5,6 @@
   "packages/node": "0.16.0",
   "packages/deno": "0.16.0",
   "packages/memory": "0.18.0",
-  "packages/web": "0.13.0"
+  "packages/web": "0.13.0",
+  "packages/box": "0.1.0"
 }
