--- a/packages/deno/tsconfig.json
+++ b/packages/deno/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "files": ["src/deno.d.ts", "src/deno-hfs.js"],
+  "files": ["src/index.js", "src/deno.d.ts", "src/deno-hfs.js"],
   "compilerOptions": {
     "declaration": true,
     "emitDeclarationOnly": true,
